--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -1,4 +1,16 @@
 
+# PCT (BEQ)
+@article{saxbe2018birth,
+  title={The Birth Experiences Questionnaire: A brief measure assessing psychosocial dimensions of childbirth.},
+  author={Saxbe, Darby and Horton, Katelyn Taline and Tsai, Ann Bryna},
+  journal={Journal of Family Psychology},
+  volume={32},
+  number={2},
+  pages={262},
+  year={2018},
+  publisher={American Psychological Association}
+}
+
 # ARQ second reference 
 @inproceedings{wongpakaran2021validation,
   title={Validation of the relationships questionnaire (RQ) against the experience of close relationship-revised questionnaire in a clinical psychiatric sample},
